# Translate-App

./: .dockerignore  .gitignore  LICENSE  README.MD  pyproject.toml
api/: main.py
api/schemas/: translate.py
api/services/: translator.py
api/tests/: test_translate.py
static/: index.html
